--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -86,3 +86,13 @@ a.custom-box {
   text-decoration: none;
   color: inherit;
 }
+
+nav.navbar {
+  min-height: 100vh;
+}
+@media (max-width: 767.98px) {
+  nav.navbar {
+    min-height: auto;
+    width: 100%;
+  }
+}
