--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,8 @@
+html, body {
+  height: 100%;
+}
+
+
 body {
   font-family: 'Segoe UI', sans-serif;
 }
@@ -14,13 +19,16 @@ body {
 }
 
 #page-content {
+  position: relative;
+  z-index: 1;
   flex-grow: 1;
-  background-color: #f8f9fa;
+  background-color:#faf9fa;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start; /* Aligns content to the top */
-  overflow: hidden;
+  justify-content: flex-start;
+  overflow-y: auto;
 }
+
 
 #welcomeText{
   padding-bottom: 20px;
